fixed comment placeholder color back to visibile

--- a/src/css/commentSection.css
+++ b/src/css/commentSection.css
@@ -21,6 +21,10 @@
   color: black;
 }
 
+.cmnts::placeholder {
+  color: black;
+}
+
 .btn {
   background-color: black;
   color: gold;
